# Avilla-Console

./: .gitignore  README.md  main.py  pyproject.toml
avilla/console/: account.py  element.py  message.py  protocol.py  service.py  staff.py
avilla/console/descriptor/: event.py
avilla/console/event/: message.py
avilla/console/frontend/: app.py  info.py
avilla/console/frontend/components/chatroom/: message.py  toolbar.py
avilla/console/frontend/router/: router.py
avilla/console/frontend/storage/: __init__.py
avilla/console/frontend/views/: horizontal.py
avilla/console/impl/: console.py  context_source.py
avilla/console/perform/action/: activity.py  message.py  profile.py
avilla/console/perform/event/: message.py
avilla/console/perform/message/: deserialize.py  serialize.py
