[project]
name = "avilla-console"
version = "0.2.0"
description = "Avilla Console Protocol"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "avilla-core>=1.0.0a5",
    "textual<1.0.0, >=0.29.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "AGPL-3.0"}

[build-system]
requires = ["pdm-backend>=1.0"]
build-backend = "pdm.backend"


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "creart-graia>=0.1.5",
]
[tool.pdm.build]
includes=["avilla/console"]